# otus_labs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  local_build.sh
.github/workflows/: release.yml
helloworld/: CMakeLists.txt
helloworld/boost_tests/: CMakeLists.txt  boost_test.cpp
helloworld/gtests/: CMakeLists.txt  gtest.cpp
helloworld/lib/: CMakeLists.txt
ip_filter/: CMakeLists.txt
